<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        tools:context=".ImcActivity">

        <TextView
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/icq_desc"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:text="@string/tamanho"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:gravity="center"
            android:inputType="number"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="40dp"
            android:maxLength="3"
            android:id="@+id/edit_icq_quadril"
            android:hint="@string/cintura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/tamanhoQuadril"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:gravity="center"
            android:inputType="number"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="40dp"
            android:maxLength="3"
            android:id="@+id/edit_icq_cintura"
            android:hint="@string/quadril"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:textColor="@android:color/white"
            android:id="@+id/btn_icq_calc"
            android:background="@drawable/bg_button_calc"
            android:text="@string/calc"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:textColor="@android:color/white"
            android:id="@+id/btn_icq_limpar"
            android:background="@drawable/bg_button_calc"
            android:text="@string/clean"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>
</ScrollView>