<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".ImcActivity">

    <TextView
        android:text="@string/imc_desc"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:gravity="center"
        android:inputType="number"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="40dp"
        android:maxLength="3"
        android:id="@+id/edit_imc_weight"
        android:hint="@string/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:gravity="center"
        android:inputType="number"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="40dp"
        android:maxLength="3"
        android:id="@+id/edit_imc_height"
        android:hint="@string/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:textColor="@android:color/white"
        android:id="@+id/btn_imc_send"
        android:background="@drawable/bg_button_calc"
        android:text="@string/calc"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:textColor="@android:color/white"
        android:id="@+id/btn_imc_limpar"
        android:background="@drawable/bg_button_calc"
        android:text="@string/clean"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>