<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeberAgua">
    
    <View
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/bebaagua"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        app:layout_constraintTop_toTopOf="@+id/header_title"
        app:layout_constraintStart_toStartOf="@+id/header_title"/>

    <ImageView
        android:id="@+id/ic_redefinir"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_refresh"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="@+id/header_title"
        app:layout_constraintTop_toTopOf="@+id/header_title"/>

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/peso"
        android:padding="15dp"
        android:textSize="18sp"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:gravity="center"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#F3D304"
        android:textColorHint="#F3D304"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/idade"
        android:padding="15dp"
        android:textSize="18sp"
        android:inputType="number"
        android:maxLength="3"
        android:gravity="center"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#F3D304"
        android:textColorHint="#F3D304"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_agua_calc"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_degrade_button"
        android:text="@string/calc_agua"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_peso" />

    <View
        android:id="@+id/container_result_ml"
        android:layout_width="346dp"
        android:layout_height="112dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/container_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_agua_calc" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="@+id/container_result_ml"
        app:layout_constraintEnd_toEndOf="@+id/container_result_ml"
        app:layout_constraintBottom_toBottomOf="@+id/container_result_ml"
        app:layout_constraintStart_toStartOf="@+id/container_result_ml"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/app_lembrete"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bg_degrade_button"
        android:text="@string/lembrete"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/app_alarm"
        app:layout_constraintTop_toBottomOf="@+id/container_result_ml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/app_alarm"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bg_degrade_button"
        android:text="@string/alarm"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_result_ml" />

    <TextView
        android:id="@+id/text_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="36dp"
        android:text="@string/hora"
        android:textColor="#FBDD82"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/text_dois_pontos"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_alarm"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/doisPontos"
        android:textColor="#FBDD82"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/text_seconds"
        app:layout_constraintTop_toBottomOf="@+id/app_alarm" />

    <TextView
        android:id="@+id/text_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="144dp"
        android:text="@string/seconds"
        android:textColor="#FBDD82"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_alarm" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>